--- a/.classpath
+++ b/.classpath
@@ -2,6 +2,6 @@
 <classpath>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
 	<classpathentry kind="src" path="src"/>
-	<classpathentry kind="lib" path="D:/Softwares/swt-4.11-win32-win32-x86_64/swt.jar"/>
+	<classpathentry kind="lib" path="C:/Users/HB/Downloads/swt-4.11-win32-win32-x86_64/swt.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
