--- a/.classpath
+++ b/.classpath
@@ -3,6 +3,14 @@
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry exported="true" kind="lib" path="libs/swt.jar"/>
+	<classpathentry kind="lib" path="libs/org.eclipse.jgit-5.7.0.202003110725-r.jar"/>
+	<classpathentry kind="lib" path="libs/commons-io-2.6.jar"/>
+	<classpathentry kind="lib" path="libs/slf4j-api-1.7.26-sources.jar"/>
+	<classpathentry kind="lib" path="libs/slf4j-api-1.7.26.jar"/>
+	<classpathentry kind="lib" path="libs/slf4j-simple-1.7.26-sources.jar"/>
+	<classpathentry kind="lib" path="libs/slf4j-simple-1.7.26.jar"/>
+	<classpathentry kind="lib" path="libs/sqlite-jdbc-3.27.2.1.jar"/>
+	<classpathentry kind="lib" path="libs/gson-2.8.6.jar"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/Common"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
