--- a/.classpath
+++ b/.classpath
@@ -1,7 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry kind="src" path="src"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER">
+		<attributes>
+			<attribute name="module" value="true"/>
+		</attributes>
+	</classpathentry>
 	<classpathentry exported="true" kind="lib" path="libs/swt.jar"/>
 	<classpathentry kind="lib" path="libs/commons-io-2.6.jar"/>
 	<classpathentry kind="lib" path="libs/slf4j-api-1.7.26-sources.jar"/>
@@ -13,6 +17,7 @@
 	<classpathentry kind="lib" path="libs/org.eclipse.jgit-5.4.2.201908231537-r.jar"/>
 	<classpathentry kind="lib" path="libs/bcpg-jdk15to18-165.jar"/>
 	<classpathentry kind="lib" path="libs/bcprov-ext-jdk15to18-165.jar"/>
+	<classpathentry kind="lib" path="libs/objectdb.jar"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/Common"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
